# mons

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: Vcpkg.cmake
examples/FFN/: client.cpp  mons_config.hpp  network_config.txt  server.cpp
include/: mons.hpp
include/mons/: client.hpp  common.hpp  config.hpp  server.hpp  version.hpp
include/mons/Client/: dist_function_client.hpp  dist_function_client_impl.hpp
include/mons/Common/: config_hash.hpp  dist_function.hpp  enum_elem_map.hpp  function_accessor.hpp  has_train_form.hpp  log.hpp  network.hpp  network_impl.hpp  remote_client.hpp  remote_client_impl.hpp  safe_ref.hpp  safe_ref_impl.hpp  serialize.hpp  socket.hpp  socket_impl.hpp
include/mons/Common/Message/: base.hpp  cereal.hpp  connect_info.hpp  evaluate_with_gradient.hpp  gradient.hpp  heartbeat.hpp  message_types.hpp  operation_status.hpp  register_types.hpp  shuffle.hpp  tensor.hpp  update_function.hpp  update_parameters.hpp  update_predictors.hpp  update_responses.hpp  update_weights.hpp
include/mons/Common/Networking/: network.hpp  network_impl.hpp
include/mons/Common/Networking/Message/: base.hpp  heartbeat.hpp  heartbeat_message.hpp  message_types.hpp  network_message.hpp  register_types.hpp  shuffle.hpp  shuffle_message.hpp  tensor.hpp  tensor_message.hpp  update_predictors.hpp  update_predictors_message.hpp  update_responses.hpp  update_responses_message.hpp  update_weights.hpp  update_weights_message.hpp
include/mons/Server/: async_client_iterator.hpp  async_client_iterator_impl.hpp  dist_function_server.hpp  dist_function_server_impl.hpp  update_remote_params_callback.hpp
tests/: equality_test.cpp  local_network_test.cpp  message_serialization_test.cpp  test.cpp
